<resources>
    <string name="nombreRed">Nombre de la red:</string>
    <string name="ejClaveWifi">Ej: 123456</string>
    <string name="app_name">AppDispensador</string>
    <string name="saludo">¡Hola!</string>
    <string name="btnSgte">SIGUIENTE</string>
    <string name="cfgBt">Configuracion de Bluetooth</string>
    <string name="title_activity_config_wifi">configWifi</string>
    <string name="lblNombreRed">Nombre de la red</string>
    <string name="lblContrasenia">Contrasena</string>
    <string name="opcionConfig">Configuracion</string>
    <string name="opcionAbout">Acerca de</string>
    <string name="opcionHome">Inicio</string>
    <string name="opcionEstado">Estado</string>
    <string name="opcionHistorico">Historico</string>
    <string name="nombreMarca">Happy Pet Feeders™</string>
    <string name="tituloContador">Su mascota será alimentada en…</string>
    <string name="hora">Horas</string>
    <string name="minuto">Minutos</string>
    <string name="segundo">Segundos</string>
    <string name="alimentar">Alimentar Manualmente</string>
    <string name="nombreMascota">Ingresa el nombre de tu mascota</string>
    <string name="inputPorcion">Ingresa la cantidad de comida que come tu mascota por porcion</string>
    <string name="modoAlimentacion">Escoja el modo de alimentación</string>
    <string name="alimentoProgramado">Alimentación programada</string>
    <string name="alimentoAutomatico">Alimentación automática</string>
    <string name="programar">Programar Alimento</string>
    <string name="aplicarCambios">Aplicar cambios</string>
    <string name="restablecerCambios">Restablecer cambios</string>
    <string name="hrasConfiguradas">Horarios de comida configurados</string>
    <string name="dispensador">Dispensador</string>
    <string name="contenedor">Contenedor</string>
    <string name="estadoConexion">Estado de conexion:</string>
    <string name="modelo">Modelo:</string>
    <string name="estado">Estado:</string>
    <string name="cantidadMax">Cantidad máxima:</string>
    <string name="cantidadActual">Cantidad Actual:</string>
    <string name="tituloGrafico">Grafico de movimiento en tiempo real:</string>
    <string name="tituloTablaComidas">Tabla histórica de comidas</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_config_hora">activityConfigHora</string>
</resources>